FIX: HTML şablonlarında NoReverseMatch (analiz_fark_ozeti) hatası giderildi, doğru URL adı kullanıldı.

--- a/sayim/templates/sayim/raporlama.html
+++ b/sayim/templates/sayim/raporlama.html
@@ -33,7 +33,7 @@
 
         <div class="analiz-container">
             <a href="{% url 'analiz_performans' pk=sayim_emri.pk %}" class="analiz-btn">PERFORMANS ANALİZİ</a>
-            <a href="{% url 'analiz_fark_ozeti' pk=sayim_emri.pk %}" class="analiz-btn fark-btn">CANLI FARK ÖZETİ (STOK GRUBU)</a>
+            <a href="{% url 'canli_fark_ozeti' pk=sayim_emri.pk %}"  class="analiz-btn fark-btn">CANLI FARK ÖZETİ (STOK GRUBU)</a>
             
             <a href="{% url 'analiz_konum' pk=sayim_emri.pk %}" class="analiz-btn konum-btn">
                 🧭 KONUM ANALİZİ
