--- a/sayim/templates/sayim/sayim_giris.html
+++ b/sayim/templates/sayim/sayim_giris.html
@@ -123,7 +123,7 @@
     let currentSeriNo = 'YOK';
     
     // ⭐ KRİTİK ÇÖZÜM: SAYIM EMRİ ID'sini doğrudan template tag'inden alıyoruz.
-    const SAYIM_EMRI_ID = "{{ sayim_emri.pk }}";
+    const SAYIM_EMRI_ID = "{{ sayim_emri_id }}";
     
     // CSRF Token Fonksiyonu (Django POST için kritik)
     function getCookie(name) {
